--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@*
+    ...Tag reader below for greater ease of use and readability    
+*@
 @{
     ViewBag.Title = "Zack's Second Assignment";
     ViewBag.H1 = "Hi, my name is Zack Jolie. I usually go by 'Zack', but you can also call me by my last name (it's pronounced like 'Jolly').";
